Fix header styling on smaller devices

--- a/public/assets/styles/pages/header.less
+++ b/public/assets/styles/pages/header.less
@@ -5,7 +5,7 @@
   align-items: flex-start;
   border-bottom: solid 1px @light-grey;
   display: flex;
-  flex-flow: row wrap;
+  overflow-x: scroll;
   padding: @g-padding-sidebar @g-padding-sidebar 0;
 
   .header__button {
@@ -18,6 +18,7 @@
     height: @size;
     margin-right: @dropdown-padding-left;
     margin-top: @button-offset;
+    min-width: @size;
     width: @size;
     transition: transform .2s;
 
